change title of webpage

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="format-detection" content="telephone=no"/>
     <meta name="msapplication-tap-highlight" content="no"/>
 
-    <title>Digition-1</title>
+    <title>Divition-2</title>
 
     <meta name="application-name" content="Digiont-1"/>
     <meta name="description" content="Digiont-1">
